tests/invalid/switch_type.lang
/* Supondo que switch sรณ aceite int/char */
string s;
s = "ola";
switch(s) { 
    default: {}
}